# matu_rust

./: Cargo.toml  setup.ps
.sqlx/: query-19c80c19b32f949361f7d6dcf83257dd7cda8f8ab75d4834b181dad163de64e2.json  query-34a8d59baf6b8b6ed751edf5c57ccb271818b76a00a0d5b3becfcc46a0752742.json  query-71ccdcef2af45a97713699224f1e275e30f0306f47f70198a294e9db3493fe3e.json  query-9923586e5c70a41f8a3784d688db900541867c64feb4ae7e576f9897522a87a3.json  query-9ccb6eeec4d48a9906f7a7dcde5935f3f8be68ecda623295d2fde0a5256fc5ee.json  query-baa853cdb324c31c7e370f1250e2c9369729ad2c3d22074635b256f6d3dda570.json  query-be6d33b42b7d0c694964475f8866a8c96c95b8877749d73ac029474ef1fc10b5.json  query-cc587b9a6479135e759599c8e600ce2cd4742986a4cc2c287307540c8acf3556.json  query-d61d64263e82a1a234f45ab2ae6ce37caf6ee355daba1cf3adfa5b7e86c24f39.json  query-dd77b7849d97880f773c6ca9ef714609e38accc9fa0b41c713f404f2c2d953da.json  query-df79618575ed0bc069f001ff40383c2172c05b4489c872eb9398fe7d526f864f.json
migrations/: 20250707143029_create_users_table.sql  20250708212716_create_posts_table.sql
src/: db.rs  main.rs
src/app/: mod.rs  post_service.rs  post_service_impl.rs  user_service.rs  user_service_impl.rs
src/domain/: post.rs  user.rs
src/infra/repository/: mod.rs  post_repo.rs  post_repo_impl.rs  user_repo.rs  user_repo_impl.rs
src/web/: mod.rs  users_client.rs
src/web/handlers/: mod.rs  post_handler.rs  user_handler.rs
src/web/models/: mod.rs  post_dto.rs  user_dto.rs
